project1/test/test_11711310_2.out
Error type B at Line 3: Missing specifier
Error type A at Line 9: unknown lexeme $
