project1/test/test_11711310_2.spl
int foo()
{
  a = 12;
  char b = '\x65';
}

char bar(int d)
{
  return $;
}

